--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="trial.jpg" alt="Yash Chourasiya"></td>
+        <td><img src="images/yashchourasiya.jpg" alt="Yash Chourasiya"></td>
         <td><h1>Yash Chourasiya</h1>
         <p><i>I am an Student at Mahatma Jyotiba Phule Rohilkhand University at <strong><a href="https://en.wikipedia.org/wiki/Information_technology">Computer science and information technology</a></strong> department.</i></p>
         <p>i <3 code</p></td>
