--- a/index.html
+++ b/index.html
@@ -3,26 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>Yash's personal site</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+<center>
     <table cellspacing="20">
       <tr>
-        <td><img src="images/yashchourasiya.jpg" alt="Yash Chourasiya"></td>
+        <td><img src="images/yashchourasiya.png" alt="Yash Chourasiya"></td>
         <td><h1>Yash Chourasiya</h1>
         <p><i>I am an Student at Mahatma Jyotiba Phule Rohilkhand University at <strong><a href="https://en.wikipedia.org/wiki/Information_technology">Computer science and information technology</a></strong> department.</i></p>
         <p>i <3 code</p></td>
       </tr>
     </table>
-<hr size="3" noshade>
+<hr>
 <h3>Educational Qualifictions</h3>
 <ul>
   <li>High schooling from Hema hr. sec. school, Bhopal</li>
   <li>intermediate schooling from Hema hr. sec. school, Bhopal</li>
   <li>Bachelor's degree from <strong>MJPRU</strong>, Bareilly</li>
 </ul>
-<hr size="3" noshade>
+<hr>
 <h3>My Skills</h3>
-<table border="2" cellspacing="1">
+<table cellspacing="10">
   <tr>
     <td>C++</td><td>⭐⭐⭐</td><td>photography</td><td>⭐⭐</td>
   </tr>
@@ -34,7 +36,7 @@
   </tr>
 </table>
 <br>
-<hr size="3" noshade>
+<hr>
 <br>
 <h3>Timeline</h3>
 <table border="2" cellspacing="1">
@@ -47,7 +49,7 @@
     <td>Finished Higher School Education(10th Class)</td>
   </tr>
   <tr>
-    <td>2020-21</td>
+    <td>2020-20</td>
     <td>Finished Intermediate School Education(12th Class)</td>
   </tr>
   <tr>
@@ -56,8 +58,9 @@
   </tr>
 </table>
 <br>
-<hr size="3" noshade>
+<hr>
 <br>
 <a href="contact.html"><h4>contact details</h4></a>
+</center>
   </body>
 </html>
